[package]
name = "round-based"
version = "0.1.4"
edition = "2018"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
license = "GPL-3.0"
description = "Driver for round-based protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
#tokio = { version = "1.0.1", features = ["rt", "sync", "time"], optional = true }
#futures = { version = "0.3.9", optional = true }
#async-stream = { version = "0.3.0", optional = true }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx" }
serde = { version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx.git" }

#[dev-dependencies]
#tokio = { version = "1.0.1", features = ["rt", "sync", "time", "macros"] }
#sha2 = "0.9.2"
#rand = "0.8.1"

[features]
#default = ["async-runtime"]
#async-runtime = ["tokio", "futures", "async-stream"]
# Exposes utils useful for testing
dev = []

#[[test]]
#name = "simulate_silly_protocol"
#required-features = ["dev", "async-runtime"]
